apps/2-base-infrastructure/cdk.out/tutorseekers-uk-dev-vpc.template.json
{
 "Resources": {
  "tutorseekersukdevvpcC6B5AE9F": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.1.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/Resource"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1Subnet89D42B19": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.1.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1RouteTable4021B15A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1RouteTableAssociation479BFF26": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1RouteTable4021B15A"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1Subnet89D42B19"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1DefaultRouteBBA00B2F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "tutorseekersukdevvpcIGWD8993ED5"
    },
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1RouteTable4021B15A"
    }
   },
   "DependsOn": [
    "tutorseekersukdevvpcVPCGW61D8E6BD"
   ],
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/DefaultRoute"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1EIP6D8E74F7": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/EIP"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet1NATGateway2E835C3C": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "tutorseekersukdevvpctutorseekersukdevpublicSubnet1EIP6D8E74F7",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1Subnet89D42B19"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "DependsOn": [
    "tutorseekersukdevvpctutorseekersukdevpublicSubnet1DefaultRouteBBA00B2F",
    "tutorseekersukdevvpctutorseekersukdevpublicSubnet1RouteTableAssociation479BFF26"
   ],
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet1/NATGateway"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet2Subnet1274D69C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.1.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet2RouteTable6E12F193": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet2RouteTableAssociationC3156758": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet2RouteTable6E12F193"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet2Subnet1274D69C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevpublicSubnet2DefaultRouteDED0D74C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "tutorseekersukdevvpcIGWD8993ED5"
    },
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet2RouteTable6E12F193"
    }
   },
   "DependsOn": [
    "tutorseekersukdevvpcVPCGW61D8E6BD"
   ],
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-publicSubnet2/DefaultRoute"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1SubnetDBE7A493": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.1.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-lambda"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1RouteTableF9C92AAD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1RouteTableAssociation4FFE2639": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1RouteTableF9C92AAD"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1SubnetDBE7A493"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1DefaultRouteCD391FE6": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1NATGateway2E835C3C"
    },
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet1RouteTableF9C92AAD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet1/DefaultRoute"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2Subnet83E9FED8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.1.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-lambda"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2RouteTableB11E7B2D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2RouteTableAssociation55A1317E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2RouteTableB11E7B2D"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2Subnet83E9FED8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2DefaultRouteC91A8626": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevpublicSubnet1NATGateway2E835C3C"
    },
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevlambdaSubnet2RouteTableB11E7B2D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambdaSubnet2/DefaultRoute"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet1Subnet3DA68D8A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2a",
    "CidrBlock": "10.1.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet1/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet1RouteTable7CDCED52": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet1"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet1/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet1RouteTableAssociation6D3D879F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet1RouteTable7CDCED52"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet1Subnet3DA68D8A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet1/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet2Subnet70B55D8B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "eu-west-2b",
    "CidrBlock": "10.1.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "tutorseekers-uk-dev-database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet2/Subnet"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet2RouteTable1ECFDAE3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet2"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet2/RouteTable"
   }
  },
  "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet2RouteTableAssociation14F10C3A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet2RouteTable1ECFDAE3"
    },
    "SubnetId": {
     "Ref": "tutorseekersukdevvpctutorseekersukdevdatabaseSubnet2Subnet70B55D8B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-databaseSubnet2/RouteTableAssociation"
   }
  },
  "tutorseekersukdevvpcIGWD8993ED5": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-vpc"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/IGW"
   }
  },
  "tutorseekersukdevvpcVPCGW61D8E6BD": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "tutorseekersukdevvpcIGWD8993ED5"
    },
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/VPCGW"
   }
  },
  "tutorseekersukdevvpcRestrictDefaultSecurityGroupCustomResourceF593B856": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "tutorseekersukdevvpcC6B5AE9F",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "216211142709"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:eu-west-2:216211142709:security-group/",
             {
              "Fn::GetAtt": [
               "tutorseekersukdevvpcC6B5AE9F",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-216211142709-eu-west-2",
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "tutorseekersukdevlambdasg755FDE01": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "uk dev lambda security group",
    "GroupName": "tutorseekers-uk-dev-lambda-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-lambda-sg"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-lambda-sg/Resource"
   }
  },
  "tutorseekersukdevnextsg754522AC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "uk dev next security group",
    "GroupName": "tutorseekers-uk-dev-next-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "uk dev next allows http access from anywhere",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIpv6": "::/0",
      "Description": "uk dev next allows http access from anywhere",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "uk dev next allows https access from anywhere",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIpv6": "::/0",
      "Description": "uk dev next allows https access from anywhere",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "uk dev next allows nginx access from anywhere",
      "FromPort": 3000,
      "IpProtocol": "tcp",
      "ToPort": 3000
     },
     {
      "CidrIpv6": "::/0",
      "Description": "uk dev next allows nginx access from anywhere",
      "FromPort": 3000,
      "IpProtocol": "tcp",
      "ToPort": 3000
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "uk dev next allows SSH access from anywhere",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "Tags": [
     {
      "Key": "Name",
      "Value": "tutorseekers-uk-dev-next-sg"
     },
     {
      "Key": "Region",
      "Value": "uk"
     },
     {
      "Key": "Site",
      "Value": "tutorseekers"
     },
     {
      "Key": "Stage",
      "Value": "dev"
     }
    ],
    "VpcId": {
     "Ref": "tutorseekersukdevvpcC6B5AE9F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/tutorseekers-uk-dev-next-sg/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/3WOQW/CMAyFfwv3NCud9gO6akJctqiduE5uasDQJlXstEKI/z51TGSXnfze52frFXr9/KLzFcyc2e6c9dTqayNgzwpm/kJb6OtutKrau52plIltT7aJrUNZWFK1j4Kf0PaYeGIls7cEQt49wot425plvINsQHCGizKBJhBMj7dOMDh8BO5Nfl0pAvY4oBPVoI2B5LIJPo4/Hf6Cm6qRfQwWVRVZ/JDs3v2zMsFP1GF4BUZVMqM0Agdyh+XmI8oY5aac71Cf+Gkqcr3Odb46MVEWohMaUNf3+Q2+kGcXZgEAAA=="
   },
   "Metadata": {
    "aws:cdk:path": "tutorseekers-uk-dev-vpc/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "tutorseekersukdevvpcarn": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "arn:aws:ec2:eu-west-2:216211142709:vpc/",
      {
       "Ref": "tutorseekersukdevvpcC6B5AE9F"
      }
     ]
    ]
   },
   "Export": {
    "Name": "tutorseekers-uk-dev-vpc-arn"
   }
  },
  "tutorseekersukdevvpcid": {
   "Value": {
    "Ref": "tutorseekersukdevvpcC6B5AE9F"
   },
   "Export": {
    "Name": "tutorseekers-uk-dev-vpc-id"
   }
  },
  "tutorseekersukdevvpcids": {
   "Value": "eu-west-2a",
   "Export": {
    "Name": "tutorseekers-uk-dev-vpc-ids"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
